# First-MCP

./: README.md  main.py  pyproject.toml  requirements.txt
MCP-SERVERS/: execute-shell-mcp.py  fastapi-mcp-calculator.py  fastmcp-calculator.py  feed-mcp.py  math-mcp.py  weather-mcp.py
