[project]
name = "first-mcp"
version = "0.1.0"
description = "This Contain my First Basic MCP Agent with Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "mcp>=1.9.4",
    "requests>=2.32.4",
]
